@@ -42,3 +42,7 @@ KS_INSTKEY_SKIP = -99
 BOOTPROTO_DHCP = "dhcp"
 BOOTPROTO_BOOTP = "bootp"
 BOOTPROTO_STATIC = "static"
+
+GROUP_REQUIRED = 0
+GROUP_DEFAULT = 1
+GROUP_ALL = 2
