@@ -1,5 +1,12 @@
 2007-02-20  Chris Lumens  <clumens@redhat.com>
 
+	* pykickstart/parser.py (Group):  Added an object for dealing with
+	extended group syntax.
+	(Packages._processGroup):  Add a new function to handle the extended
+	group syntax.
+
+	* pykickstart/constants.py:  New group selection constants.
+
 	* pykickstart/handlers/control.py (dataMap):  Add a mapping for data
 	objects as well.
 
